--- a/base_external/configs/aesd_rpi_defconfig
+++ b/base_external/configs/aesd_rpi_defconfig
@@ -2,6 +2,7 @@ BR2_arm=y
 BR2_cortex_a72=y
 BR2_ARM_FPU_NEON_VFPV4=y
 BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_5_10=y
+BR2_TOOLCHAIN_BUILDROOT_WCHAR=y
 BR2_TOOLCHAIN_BUILDROOT_CXX=y
 BR2_TARGET_GENERIC_ROOT_PASSWD="root"
 BR2_SYSTEM_DHCP="eth0"
@@ -16,27 +17,21 @@ BR2_LINUX_KERNEL_DTS_SUPPORT=y
 BR2_LINUX_KERNEL_INTREE_DTS_NAME="bcm2711-rpi-4-b"
 BR2_LINUX_KERNEL_NEEDS_HOST_OPENSSL=y
 BR2_PACKAGE_ALSA_UTILS=y
-BR2_PACKAGE_ALSA_UTILS_ALSACONF=y
-BR2_PACKAGE_ALSA_UTILS_ACONNECT=y
-BR2_PACKAGE_ALSA_UTILS_ALSALOOP=y
-BR2_PACKAGE_ALSA_UTILS_ALSAUCM=y
-BR2_PACKAGE_ALSA_UTILS_ALSATPLG=y
 BR2_PACKAGE_ALSA_UTILS_AMIDI=y
-BR2_PACKAGE_ALSA_UTILS_AMIXER=y
-BR2_PACKAGE_ALSA_UTILS_APLAY=y
-BR2_PACKAGE_ALSA_UTILS_APLAYMIDI=y
-BR2_PACKAGE_ALSA_UTILS_ARECORDMIDI=y
 BR2_PACKAGE_ALSA_UTILS_ASEQDUMP=y
-BR2_PACKAGE_ALSA_UTILS_ASEQNET=y
-BR2_PACKAGE_ALSA_UTILS_BAT=y
-BR2_PACKAGE_ALSA_UTILS_IECSET=y
 BR2_PACKAGE_ALSA_UTILS_SPEAKER_TEST=y
+BR2_PACKAGE_JACK2=y
+BR2_PACKAGE_LIBTOOL=y
 BR2_PACKAGE_RPI_FIRMWARE=y
 BR2_PACKAGE_RPI_FIRMWARE_VARIANT_PI4=y
-BR2_PACKAGE_RPI_FIRMWARE_CONFIG_FILE="board/raspberrypi4/config_4.txt"
+BR2_PACKAGE_RPI_FIRMWARE_CONFIG_FILE="../base_external/configs/config_4.txt"
+BR2_PACKAGE_PORTAUDIO=y
+BR2_PACKAGE_PORTAUDIO_CXX=y
+BR2_PACKAGE_ZLIB=y
+BR2_PACKAGE_LIBOGG=y
 BR2_TARGET_ROOTFS_EXT2=y
 BR2_TARGET_ROOTFS_EXT2_4=y
-BR2_TARGET_ROOTFS_EXT2_SIZE="120M"
+BR2_TARGET_ROOTFS_EXT2_SIZE="200M"
 # BR2_TARGET_ROOTFS_TAR is not set
 BR2_PACKAGE_HOST_DOSFSTOOLS=y
 BR2_PACKAGE_HOST_GENIMAGE=y
