added GPIO input support

--- a/base_external/configs/aesd_rpi_defconfig
+++ b/base_external/configs/aesd_rpi_defconfig
@@ -25,6 +25,8 @@ BR2_PACKAGE_LIBTOOL=y
 BR2_PACKAGE_RPI_FIRMWARE=y
 BR2_PACKAGE_RPI_FIRMWARE_VARIANT_PI4=y
 BR2_PACKAGE_RPI_FIRMWARE_CONFIG_FILE="../base_external/configs/config_4.txt"
+BR2_PACKAGE_PYTHON3=y
+BR2_PACKAGE_PYTHON_RPI_GPIO=y
 BR2_PACKAGE_PORTAUDIO=y
 BR2_PACKAGE_PORTAUDIO_CXX=y
 BR2_PACKAGE_ZLIB=y
